<resources>
    <string name="app_name">U up?</string>
    <string name="add">Add</string>
    <string name="bonus_points">BP</string>
    <string name="post_title">Post Title</string>
    <string name="post_text">Type your post here</string>
    <string name="save_text">Save</string>
    <string name="post_text_placeholder">Post Text Here</string>
    <string name="post_creator_placeholder">Post Creator</string>
    <string name="post_title_placeholder">Post Title</string>
    <string name="time_created_placeholder">Time Created</string>
    <string name="bonus_points_placeholder">Bonus Points</string>
    <string name="fax">Fax</string>
    <string name="cap">Cap</string>
    <string name="comments_header">Comments</string>
    <string name="Username">Username</string>
    <string name="u_up">U up?</string>
    <string name="backButtonDescription">Back Button to go to previous activity</string>
    <string name="menuButtonDescription">Menu Button to go to open up the navigation menu</string>
    <string name="BPButtonDescription">Profile button</string>
    <string name="bonus_points_up">Bonus Points:</string>
    <string name="date_joined_up">Date Joined:</string>
    <string name="PP_placeholder">Placeholder for profile pictures</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="karma">Karma:</string>
    <string name="date_joined">Date Joined:</string>
    <string name="nav_username">Username</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="comments">Comments</string>
    <string name="comment_creator">Comment Creator</string>
    <string name="comment">Comment</string>
    <string name="top_5_users">1. user1\n2. user2\n3. user3\n4. user4\n5. user5</string>
    <string name="nav_username">Username</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="comments">Comments</string>
    <string name="comment_creator">Comment Creator</string>
    <string name="comment">Comment</string>
    <string name="nav_username">Username</string>
</resources>