<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/home"
                />

            <item
                android:id="@+id/karma_count"
                android:icon="@drawable/billed_cap"
                android:title = "@string/karma" />
            <item
                android:id="@+id/date"
                android:title="@string/date_joined"
                android:icon="@drawable/calendar_2_"
                 />
        </menu>
    </item>



</menu>