<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".PostDetails"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/postTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/post_title_placeholder"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:textStyle="bold"
        android:lines="2"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/postText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_text_placeholder"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:lines="4"
        />
    <TextView
        android:id="@+id/postCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/post_creator_placeholder"
        android:textColor="@color/White"
        android:textSize="15sp"
        android:textStyle="bold"
        android:lines="1"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tc_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_created_placeholder"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bp_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonus_points_placeholder"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fax_placeholder"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/fax_placeholder"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/upvote"
            android:backgroundTint="@color/cardview_light_background"
            android:textSize="20sp"
            android:contentDescription="@string/fax"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cap_placeholder"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/downvote"
            android:backgroundTint="@color/cardview_light_background"
            android:contentDescription="@string/cap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bp_placeholder"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/comments_header"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="10dp">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>