<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/postCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15sp">

            <TextView
                android:id="@+id/postTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/post_title_placeholder"
                android:textColor="@color/material_dynamic_primary20"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/postText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_text_placeholder"
                android:textColor="@color/material_dynamic_primary30"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"

            />
            <TextView
                android:id="@+id/postCreator"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/post_creator_placeholder"
                android:textColor="@color/material_dynamic_primary30"
                android:textSize="12sp"
                android:textStyle="bold"
                android:lines="1"
            />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tc_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_created_placeholder"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/cap_placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bp_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bonus_points_placeholder"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/cap_placeholder"
                    app:layout_constraintEnd_toStartOf="@+id/fax_placeholder"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/fax_placeholder"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:contentDescription="@string/fax"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/fax_machine"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/cap_placeholder"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:contentDescription="@string/cap"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/billed_cap"
                    app:layout_constraintEnd_toStartOf="@+id/bp_placeholder"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textColor="@color/material_dynamic_primary30"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cap_placeholder" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>